--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -44,6 +44,7 @@
     "you-win": "คุณชนะ",
     "bet-confirmed": "ยืนยันการเดิมพัน",
     "bet-accepted": "เดิมพันสำเร็จ",
+    "bet-rejected": "การเดิมพันถูกปฏิเสธ",
     "bet-error": "ข้อผิดพลาดในการเดิมพัน",
     "bet-closed": "เดิมพันปิด",
     "bet-error-n50": "ได้วางเดิมพัน {{button}} แล้ว ไม่สามารถวางเดิมพัน {{other}}",
@@ -63,6 +64,7 @@
     "dont-show-again": "ไม่ต้องแสดงอีก",
     "streaming-error": "ข้อผิดพลาดในการสตรีม: URL สตรีมไม่ถูกต้อง",
     "no-promotion": "ไม่มีกิจกรรมในขณะนี้",
+    "disclaimer": "ข้อปฏิเสธ",
 
     "features-htp": {
         "general": {
@@ -84,6 +86,41 @@
             "paragraph-6": "แสดงสถิติของเกมที่กำลังดำเนินอยู่",
             "paragraph-7": "แสดงหรือซ่อน Roadmap/สถิติเกม",
             "paragraph-8": "เพื่อบันทึกและใช้การเดิมพันที่ชื่นชอบของผู้เล่นแต่ละคน"
+        },
+        "settings": {
+            "title": "การตั้งค่า",
+            "description": "ตัวเลือกเพิ่มเติมสำหรับปรับแต่งคุณสมบัติตามความต้องการและ偏好ของผู้ใช้",
+            "video": {
+                "title": "วิดีโอ",
+                "description": "คำอธิบาย: กำหนดการเปิดใช้งานสตรีมมิงสดและปรับความละเอียดของสตรีม",
+                "default": "ค่าเริ่มต้น: เปิดใช้งาน, ความละเอียดปานกลาง"
+            },
+            "live-streaming-audio": {
+                "title": "เสียงสตรีมมิงสด",
+                "description": "คำอธิบาย: ควบคุมการตั้งค่าเสียงสำหรับสตรีมมิงสด",
+                "default": "ค่าเริ่มต้น: เปิดใช้งาน"
+            },
+            "background-music": {
+                "title": "เพลงพื้นหลัง",
+                "description": "คำอธิบาย: ควบคุมการตั้งค่าเพลงพื้นหลัง",
+                "default": "ค่าเริ่มต้น: เปิดใช้งาน"
+            },
+            "game-effects": {
+                "title": "เอฟเฟกต์เกม",
+                "description": "คำอธิบาย: ควบคุมการตั้งค่าเสียงเอฟเฟกต์เกม",
+                "default": "ค่าเริ่มต้น: เปิดใช้งาน"
+            },
+            "auto-bet": {
+                "title": "เดิมพันอัตโนมัติ",
+                "description": "คำอธิบาย: ควบคุมการเดิมพันอัตโนมัติโดยอ้างอิงจากเดิมพันครั้งก่อน",
+                "default": "ค่าเริ่มต้น: ปิดใช้งาน"
+            },
+            "language": {
+                "title": "ภาษา",
+                "description": "คำอธิบาย: ควบคุมการตั้งค่าภาษาของเกม",
+                "default": "ค่าเริ่มต้น: ตรงกับภาษาที่เลือกล่าสุด"
+            },
+            "disclaimer-settings": "การตั้งค่าความชอบของคุณจะถูกบันทึก ยกเว้นการตั้งค่าเดิมพันอัตโนมัติซึ่งจะถูกรีเซ็ตเป็นค่าเริ่มต้น"
         }
     }
 }
