--- a/src/locales/hi/common.json
+++ b/src/locales/hi/common.json
@@ -44,6 +44,7 @@
     "you-win": "आप जीते",
     "bet-confirmed": "दांव की पुष्टि हुई",
     "bet-accepted": "शर्त स्वीकृत",
+    "bet-rejected": "शर्त अस्वीकृत",
     "bet-error": "दांव त्रुटि",
     "bet-closed": "शर्त बंद",
     "bet-error-n50": "पहले से ही {{button}} दांव लगाया है, {{other}} दांव नहीं लगा सकते",
@@ -63,6 +64,7 @@
     "dont-show-again": "फिर से न दिखाएं",
     "streaming-error": "स्ट्रीमिंग त्रुटि: अमान्य स्ट्रीमिंग URL",
     "no-promotion": "इस समय कोई आयोजन नहीं",
+    "disclaimer": "अस्वीकरण",
 
     "features-htp": {
         "general": {
@@ -84,6 +86,41 @@
             "paragraph-6": "चल रहे खेल के आंकड़े प्रदर्शित करता है।",
             "paragraph-7": "Roadmap/खेल के आंकड़े दिखाता है या छिपाता है।",
             "paragraph-8": "प्रत्येक खिलाड़ी के पसंदीदा दांवों को सहेजने और उपयोग करने के लिए।"
+        },
+        "settings": {
+            "title": "सेटिंग्स",
+            "description": "उपयोगकर्ता की आवश्यकताओं और पसंद के आधार पर सुविधाओं को कस्टमाइज़ करने के लिए अतिरिक्त विकल्प।",
+            "video": {
+                "title": "वीडियो",
+                "description": "विवरण: लाइव स्ट्रीमिंग सक्षम करने और स्ट्रीमिंग की रिज़ॉल्यूशन समायोजित करने का विन्यास करता है।",
+                "default": "डिफ़ॉल्ट: टॉगल ऑन, मध्यम रिज़ॉल्यूशन।"
+            },
+            "live-streaming-audio": {
+                "title": "लाइव स्ट्रीमिंग ऑडियो",
+                "description": "विवरण: लाइव स्ट्रीमिंग के ऑडियो सेटिंग्स को नियंत्रित करता है।",
+                "default": "डिफ़ॉल्ट: टॉगल ऑन।"
+            },
+            "background-music": {
+                "title": "बैकग्राउंड संगीत",
+                "description": "विवरण: बैकग्राउंड संगीत की सेटिंग्स को नियंत्रित करता है।",
+                "default": "डिफ़ॉल्ट: टॉगल ऑन।"
+            },
+            "game-effects": {
+                "title": "गेम प्रभाव",
+                "description": "विवरण: गेम के ध्वनि प्रभाव सेटिंग्स को नियंत्रित करता है।",
+                "default": "डिफ़ॉल्ट: टॉगल ऑन।"
+            },
+            "auto-bet": {
+                "title": "ऑटो बेट",
+                "description": "विवरण: पिछले शर्त के आधार पर स्वचालित बेटिंग को नियंत्रित करता है।",
+                "default": "डिफ़ॉल्ट: टॉगल ऑफ़।"
+            },
+            "language": {
+                "title": "भाषा",
+                "description": "विवरण: गेम की भाषा सेटिंग्स को नियंत्रित करता है।",
+                "default": "डिफ़ॉल्ट: अंतिम चयनित भाषा से मेल खाता है।"
+            },
+            "disclaimer-settings": "आपकी पसंद की सेटिंग्स सहेजी जाएंगी, सिवाय ऑटो बेट सेटिंग के, जो डिफ़ॉल्ट पर रीसेट हो जाएगी।"
         }
     }
 }
