--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -44,6 +44,7 @@
     "you-win": "승리하셨습니다",
     "bet-confirmed": "베팅 확인됨",
     "bet-accepted": "베팅 승인",
+    "bet-rejected": "베팅 거부됨",
     "bet-error": "베팅 오류",
     "bet-closed": "베팅 종료",
     "bet-error-n50": "이미 {{button}} 베팅을 했으므로 {{other}} 베팅을 할 수 없습니다",
@@ -63,6 +64,7 @@
     "dont-show-again": "다시 표시하지 않음",
     "streaming-error": "스트리밍 오류: 잘못된 스트리밍 URL",
     "no-promotion": "현재 이벤트 없음",
+    "disclaimer": "면책 조항",
 
     "features-htp": {
         "general": {
@@ -88,6 +90,41 @@
                 "paragraph-7": "Roadmap/게임 통계의 가시성을 전환합니다.",
                 "paragraph-8": "각 플레이어의 즐겨찾기 베팅을 저장하고 사용하는 데 사용됩니다."
             }
+        },
+        "settings": {
+            "title": "설정",
+            "description": "사용자 요구 및 선호도에 따른 기능 사용자 정의를 위한 추가 옵션.",
+            "video": {
+                "title": "비디오",
+                "description": "설명: 라이브 스트리밍 활성화 및 스트리밍 해상도 조정을 구성합니다.",
+                "default": "기본값: 토글 켜기, 중간 해상도."
+            },
+            "live-streaming-audio": {
+                "title": "라이브 스트리밍 오디오",
+                "description": "설명: 라이브 스트리밍 오디오 설정을 제어합니다.",
+                "default": "기본값: 토글 켜기."
+            },
+            "background-music": {
+                "title": "배경 음악",
+                "description": "설명: 배경 음악 설정을 제어합니다.",
+                "default": "기본값: 토글 켜기."
+            },
+            "game-effects": {
+                "title": "게임 효과",
+                "description": "설명: 게임 효과음 설정을 제어합니다.",
+                "default": "기본값: 토글 켜기."
+            },
+            "auto-bet": {
+                "title": "자동 베팅",
+                "description": "설명: 이전 베팅을 기반으로 자동 베팅을 제어합니다.",
+                "default": "기본값: 토글 끄기."
+            },
+            "language": {
+                "title": "언어",
+                "description": "설명: 게임 언어 설정을 제어합니다.",
+                "default": "기본값: 마지막으로 선택한 언어와 일치합니다."
+            },
+            "disclaimer-settings": "자동 베팅 설정을 제외한 모든 기본 설정이 저장되며, 자동 베팅 설정은 기본값으로 재설정됩니다."
         }
     }
 }
