add icon on how to play features

--- a/src/locales/id/p6.json
+++ b/src/locales/id/p6.json
@@ -5,21 +5,17 @@
     "4th Column": "K.4",
     "5th Column": "K.5",
     "6th Column": "K.6",
-
     "1st Row": "B.1",
     "2nd Row": "B.2",
     "3rd Row": "B.3",
     "4th Row": "B.4",
-
     "1st Column,2nd Column": "K.1-2",
     "2nd Column,3rd Column": "K.2-3",
     "3rd Column,4th Column": "K.3-4",
     "4th Column,5th Column": "K.4-5",
     "5th Column,6th Column": "K.5-6",
-
     "1st Row,2nd Row": "B.1-2",
     "3rd Row,4th Row": "B.3-4",
-
     "big": "besar",
     "small": "kecil",
     "odd": "ganjil",
@@ -33,5 +29,8 @@
     "single column": "Kolom Tunggal",
     "double row": "Baris Ganda",
     "double column": "Kolom Ganda",
-    "side bet": "Taruhan Sampingan"
+    "side bet": "Taruhan Sampingan",
+    "small/big": "kecil/besar",
+    "odd/even": "ganjil/genap",
+    "red/black": "merah/hitam"
 }
