--- a/src/locales/zh/p6.json
+++ b/src/locales/zh/p6.json
@@ -1,37 +1,36 @@
 {
-    "1st Column": "第 1 列",
-    "2nd Column": "第 2 列",
-    "3rd Column": "第 3 列",
-    "4th Column": "第 4 列",
-    "5th Column": "第 5 列",
-    "6th Column": "第 6 列",
-
-    "1st Row": "第 1 行",
-    "2nd Row": "第 2 行",
-    "3rd Row": "第 3 行",
-    "4th Row": "第 4 行",
-
-    "1st Column,2nd Column": "第 1-2 列",
-    "2nd Column,3rd Column": "第 2-3 列",
-    "3rd Column,4th Column": "第 3-4 列",
-    "4th Column,5th Column": "第 4-5 列",
-    "5th Column,6th Column": "第 5-6 列",
-
-    "1st Row,2nd Row": "第 1-2 行",
-    "3rd Row,4th Row": "第 3-4 行",
-
+    "1st Column": "第1列",
+    "2nd Column": "第2列",
+    "3rd Column": "第3列",
+    "4th Column": "第4列",
+    "5th Column": "第5列",
+    "6th Column": "第6列",
+    "1st Row": "第1行",
+    "2nd Row": "第2行",
+    "3rd Row": "第3行",
+    "4th Row": "第4行",
+    "1st Column,2nd Column": "第1-2列",
+    "2nd Column,3rd Column": "第2-3列",
+    "3rd Column,4th Column": "第3-4列",
+    "4th Column,5th Column": "第4-5列",
+    "5th Column,6th Column": "第5-6列",
+    "1st Row,2nd Row": "第1-2行",
+    "3rd Row,4th Row": "第3-4行",
     "big": "大",
     "small": "小",
     "odd": "单",
     "even": "双",
     "red": "红",
     "black": "黑",
-    "one number": "一个号码",
-    "two numbers": "两个号码",
-    "four numbers": "四个号码",
+    "one number": "单号",
+    "two numbers": "双号",
+    "four numbers": "四号",
     "single row": "单行",
     "single column": "单列",
     "double row": "双行",
     "double column": "双列",
-    "side bet": "边注"
+    "side bet": "边注",
+    "small/big": "小/大",
+    "odd/even": "单/双",
+    "red/black": "红/黑"
 }
