--- a/src/locales/en/p6.json
+++ b/src/locales/en/p6.json
@@ -5,21 +5,17 @@
     "4th Column": "C.4",
     "5th Column": "C.5",
     "6th Column": "C.6",
-
     "1st Row": "R.1",
     "2nd Row": "R.2",
     "3rd Row": "R.3",
     "4th Row": "R.4",
-
     "1st Column,2nd Column": "C.1-2",
     "2nd Column,3rd Column": "C.2-3",
     "3rd Column,4th Column": "C.3-4",
     "4th Column,5th Column": "C.4-5",
     "5th Column,6th Column": "C.5-6",
-
     "1st Row,2nd Row": "R.1-2",
     "3rd Row,4th Row": "R.3-4",
-
     "big": "big",
     "small": "small",
     "odd": "odd",
@@ -32,6 +28,9 @@
     "single row": "Single Row",
     "single column": "Single Column",
     "double row": "Double Row",
-    "double column": "Double Row",
-    "side bet": "Double Row"
+    "double column": "Double Column",
+    "side bet": "Side Bet",
+    "small/big": "small/big",
+    "odd/even": "odd/even",
+    "red/black": "red/black"
 }
