--- a/src/locales/ko/p6.json
+++ b/src/locales/ko/p6.json
@@ -1,37 +1,36 @@
 {
-    "1st Column": "열 1",
-    "2nd Column": "열 2",
-    "3rd Column": "열 3",
-    "4th Column": "열 4",
-    "5th Column": "열 5",
-    "6th Column": "열 6",
-
-    "1st Row": "행 1",
-    "2nd Row": "행 2",
-    "3rd Row": "행 3",
-    "4th Row": "행 4",
-
-    "1st Column,2nd Column": "열 1-2",
-    "2nd Column,3rd Column": "열 2-3",
-    "3rd Column,4th Column": "열 3-4",
-    "4th Column,5th Column": "열 4-5",
-    "5th Column,6th Column": "열 5-6",
-
-    "1st Row,2nd Row": "행 1-2",
-    "3rd Row,4th Row": "행 3-4",
-
-    "big": "크다",
-    "small": "작다",
-    "odd": "홀수",
-    "even": "짝수",
-    "red": "빨간색",
-    "black": "검은색",
-    "one number": "한 숫자",
+    "1st Column": "1열",
+    "2nd Column": "2열",
+    "3rd Column": "3열",
+    "4th Column": "4열",
+    "5th Column": "5열",
+    "6th Column": "6열",
+    "1st Row": "1행",
+    "2nd Row": "2행",
+    "3rd Row": "3행",
+    "4th Row": "4행",
+    "1st Column,2nd Column": "1-2열",
+    "2nd Column,3rd Column": "2-3열",
+    "3rd Column,4th Column": "3-4열",
+    "4th Column,5th Column": "4-5열",
+    "5th Column,6th Column": "5-6열",
+    "1st Row,2nd Row": "1-2행",
+    "3rd Row,4th Row": "3-4행",
+    "big": "빅",
+    "small": "스몰",
+    "odd": "홀",
+    "even": "짝",
+    "red": "레드",
+    "black": "블랙",
+    "one number": "단일 번호",
     "two numbers": "두 숫자",
     "four numbers": "네 숫자",
     "single row": "단일 행",
     "single column": "단일 열",
-    "double row": "이중 행",
-    "double column": "이중 열",
-    "side bet": "사이드 베팅"
+    "double row": "더블 행",
+    "double column": "더블 열",
+    "side bet": "사이드 베팅",
+    "small/big": "스몰/빅",
+    "odd/even": "홀/짝",
+    "red/black": "레드/블랙"
 }
