--- a/src/locales/th/p6.json
+++ b/src/locales/th/p6.json
@@ -5,33 +5,32 @@
     "4th Column": "คอลัมน์ 4",
     "5th Column": "คอลัมน์ 5",
     "6th Column": "คอลัมน์ 6",
-
     "1st Row": "แถว 1",
     "2nd Row": "แถว 2",
     "3rd Row": "แถว 3",
     "4th Row": "แถว 4",
-
     "1st Column,2nd Column": "คอลัมน์ 1-2",
     "2nd Column,3rd Column": "คอลัมน์ 2-3",
     "3rd Column,4th Column": "คอลัมน์ 3-4",
     "4th Column,5th Column": "คอลัมน์ 4-5",
     "5th Column,6th Column": "คอลัมน์ 5-6",
-
     "1st Row,2nd Row": "แถว 1-2",
     "3rd Row,4th Row": "แถว 3-4",
-
     "big": "ใหญ่",
     "small": "เล็ก",
     "odd": "คี่",
     "even": "คู่",
     "red": "แดง",
     "black": "ดำ",
-    "one number": "หนึ่งตัวเลข",
-    "two numbers": "สองตัวเลข",
-    "four numbers": "สี่ตัวเลข",
+    "one number": "หมายเลขเดียว",
+    "two numbers": "สองหมายเลข",
+    "four numbers": "สี่หมายเลข",
     "single row": "แถวเดี่ยว",
     "single column": "คอลัมน์เดี่ยว",
-    "double row": "แถวคู่",
-    "double column": "คอลัมน์คู่",
-    "side bet": "เดิมพันข้าง"
+    "double row": "สองแถว",
+    "double column": "สองคอลัมน์",
+    "side bet": "เดิมพันข้าง",
+    "small/big": "เล็ก/ใหญ่",
+    "odd/even": "คี่/คู่",
+    "red/black": "แดง/ดำ"
 }
