--- a/src/locales/vn/p6.json
+++ b/src/locales/vn/p6.json
@@ -5,21 +5,17 @@
     "4th Column": "Cột 4",
     "5th Column": "Cột 5",
     "6th Column": "Cột 6",
-
     "1st Row": "Hàng 1",
     "2nd Row": "Hàng 2",
     "3rd Row": "Hàng 3",
     "4th Row": "Hàng 4",
-
     "1st Column,2nd Column": "Cột 1-2",
     "2nd Column,3rd Column": "Cột 2-3",
     "3rd Column,4th Column": "Cột 3-4",
     "4th Column,5th Column": "Cột 4-5",
     "5th Column,6th Column": "Cột 5-6",
-
     "1st Row,2nd Row": "Hàng 1-2",
     "3rd Row,4th Row": "Hàng 3-4",
-
     "big": "lớn",
     "small": "nhỏ",
     "odd": "lẻ",
@@ -29,9 +25,12 @@
     "one number": "Một Số",
     "two numbers": "Hai Số",
     "four numbers": "Bốn Số",
-    "single row": "Hàng Đơn",
-    "single column": "Cột Đơn",
-    "double row": "Hàng Đôi",
-    "double column": "Cột Đôi",
-    "side bet": "Cược Bên"
+    "single row": "Một Hàng",
+    "single column": "Một Cột",
+    "double row": "Hai Hàng",
+    "double column": "Hai Cột",
+    "side bet": "Cược Phụ",
+    "small/big": "nhỏ/lớn",
+    "odd/even": "lẻ/chẵn",
+    "red/black": "đỏ/đen"
 }
