update features explaation

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -66,7 +66,7 @@
     "no-promotion": "no events at this time",
     "disclaimer": "disclaimer",
 
-    "features-htp": {
+    "feature-explanations": {
         "general": {
             "title": "General",
             "paragraph-1": "To participate in the game, you must have sufficient balance/funds to cover your bets. Your current balance can be seen at the bottom left of your screen.",
