--- a/src/locales/hi/common.json
+++ b/src/locales/hi/common.json
@@ -66,7 +66,7 @@
     "no-promotion": "इस समय कोई आयोजन नहीं",
     "disclaimer": "अस्वीकरण",
 
-    "features-htp": {
+    "feature-explanations": {
         "general": {
             "title": "सामान्य",
             "paragraph-1": "खेल में भाग लेने के लिए, आपके पास अपनी सट्टों को कवर करने के लिए पर्याप्त बैलेंस/फंड होना चाहिए। आपका वर्तमान बैलेंस स्क्रीन के नीचे बाईं ओर देखा जा सकता है।",
