--- a/src/locales/pt-BR/common.json
+++ b/src/locales/pt-BR/common.json
@@ -66,7 +66,7 @@
     "no-promotion": "nenhum evento no momento",
     "disclaimer": "declaração de isenção",
 
-    "features-htp": {
+    "feature-explanations": {
         "general": {
             "title": "Geral",
             "paragraph-1": "Para participar do jogo, você deve ter saldo/fundos suficientes para cobrir suas apostas. Seu saldo atual pode ser visto no canto inferior esquerdo da tela.",
