--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -66,7 +66,7 @@
     "no-promotion": "ไม่มีกิจกรรมในขณะนี้",
     "disclaimer": "ข้อปฏิเสธ",
 
-    "features-htp": {
+    "feature-explanations": {
         "general": {
             "title": "ทั่วไป",
             "paragraph-1": "เพื่อเข้าร่วมเกม คุณต้องมีเงินคงเหลือ/กองทุนเพียงพอที่จะครอบคลุมการเดิมพันของคุณ ยอดเงินปัจจุบันของคุณสามารถดูได้ที่มุมล่างซ้ายของหน้าจอ",
