--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -66,7 +66,7 @@
     "no-promotion": "không có sự kiện lúc này",
     "disclaimer": "tuyên bố từ chối",
 
-    "features-htp": {
+    "feature-explanations": {
         "general": {
             "title": "Chung",
             "paragraph-1": "Để tham gia trò chơi, bạn phải có đủ số dư/quỹ để trang trải cho các cược của mình. Số dư hiện tại của bạn có thể được xem ở góc dưới bên trái màn hình.",
