--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -66,7 +66,7 @@
     "no-promotion": "目前没有活动",
     "disclaimer": "免责声明",
 
-    "features-htp": {
+    "feature-explanations": {
         "general": {
             "title": "一般",
             "paragraph-1": "要参与游戏，您必须有足够的余额/资金来支付您的赌注。您当前的余额可以在屏幕左下角查看。",
