--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -66,7 +66,7 @@
     "no-promotion": "tidak ada promosi saat ini",
     "disclaimer": "disclaimer",
 
-    "features-htp": {
+    "feature-explanations": {
         "general": {
             "title": "Umum",
             "paragraph-1": "Untuk ikut serta dalam permainan, Anda harus memiliki saldo/dana yang mencukupi untuk menutupi taruhan Anda. Saldo Anda saat ini dapat dilihat di bagian kiri bawah layar anda.",
