--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -66,7 +66,7 @@
     "no-promotion": "현재 이벤트 없음",
     "disclaimer": "면책 조항",
 
-    "features-htp": {
+    "feature-explanations": {
         "general": {
             "title": "일반",
             "content": {
