--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -66,7 +66,7 @@
     "no-promotion": "şu anda etkinlik yok",
     "disclaimer": "feragatname",
 
-    "features-htp": {
+    "feature-explanations": {
         "general": {
             "title": "Genel",
             "paragraph-1": "Oyuna katılmak için bahislerinizi karşılayacak yeterli bakiye/fonlara sahip olmalısınız. Mevcut bakiyeniz ekranınızın sol alt köşesinde görülebilir.",
